обновил файл билда и app prop

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=orderservice
 server.port=8081
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:file:./data/order_db
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=daniil
 spring.datasource.password=psswd
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.settings.web-allow-others=true
